debug_dev_2.log
C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/config/prisma.ts(5,5): error TS2353: Object literal may only specify known properties, and 'datasources' does not exist in type 'Subset<PrismaClientOptions, PrismaClientOptions>'.

    at createTSError (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1820:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2353 ]
}
